--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,6 +11,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/Welcome to the Liar's Dice android version" />
 
 </RelativeLayout>
