--- a/res/layout/game_l.xml
+++ b/res/layout/game_l.xml
@@ -5,12 +5,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
-
-    <TextView
-        android:id="@+id/players"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/board">
 
 
 </RelativeLayout>
