The game as now the basics to play. There is a class Game_C where the method Bet decides what happens according to the game rules. The method receives the player that is playing as well as other information. Also, it knows the previous players.

--- a/res/layout/game_l.xml
+++ b/res/layout/game_l.xml
@@ -25,7 +25,11 @@
         android:layout_centerHorizontal="true"
         android:text="O jogador x apostou em k dados de valor y"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-        
+
+       <SeekBar
+           android:id="@+id/dice_number"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content" />
 
         <RadioGroup 
             android:id="@+id/radioGroup1"
